--- a/src/sass/_settings.sass
+++ b/src/sass/_settings.sass
@@ -1,4 +1,11 @@
 *
-	box-sizing: border-box
+  box-sizing: border-box
 body
-	font-family: 'Muli', sans-serif
+  font-family: "Mulish"
+  background-color: $secondary
+  color: $text-color
+.container
+  max-width: 1110px
+  margin: auto
+img
+  max-width: 100%
