--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,4 +1,5 @@
-@import 'settings'
-@import 'variables'
-@import 'blocks/header'
 @import 'normalize'
+@import 'variables'
+@import 'settings'
+@import 'blocks/header'
+@import 'media'
