--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,5 +1,24 @@
-@import 'normalize'
-@import 'variables'
-@import 'settings'
-@import 'blocks/header'
-@import 'media'
+//Подключение переменных
+@import "variables"
+// Подключение системных настроек
+@import "settings"
+//Подключение normalize
+@import "normalize"
+//Подключение header
+@import "blocks/header"
+//Хлебные крошки
+@import "blocks/breadcrumb"
+//Стили блока hotel
+@import "blocks/hotel"
+//Стили блока newslatter
+@import "blocks/newslatter"
+//Стили блока reviews
+@import "blocks/reviews"
+//Стили блока activities
+@import "blocks/activities"
+//Стили блока footer
+@import "blocks/footer"
+//Стили модального окна
+@import "blocks/modal"
+//Подключение стией для адаптива
+@import "media"
