--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -1,8 +1,23 @@
-@media (max-width: 1200px)
+@media ( max-width: 1200px)
   .container
     max-width: 960px
-@media (max-width: 992px)
-  .container
+  .slider
+    width: 590px
+  .hotel
+    &-slider
+      width: 590px
+      &__img
+        width: 100%
+        height: 100%
+        object-fit: cover
+  .card
+    width: 230px
+    height: 230px
+  .footer
+    &__input
+      flex-basis: 100%
+@media (max-width: 992px )
+  .container, .newslatter-wrapper
     max-width: 700px
   .logo
     width: 132px
@@ -19,15 +34,110 @@
       &__link
         font-size: 12px
         line-height: 15px
-@media  (max-width: 768px)
+  .hotel
+    &-grid
+      flex-direction: column
+    &__slider
+      margin-bottom: 30px
+    &-right
+      flex-direction: row
+    &-slider
+      width: 100%
+  .booking
+    width: 340px
+
+  .map
+    width: 340px
+  .reviews
+    &-slider
+      &__item
+        max-width: 580px
+  .activities
+    &-wrapper
+      flex-wrap: wrap
+    &__card
+      margin-bottom: 20px
+  .card
+    width: 340px
+    height: 250px
+  .footer
+    &-wrapper
+      grid-template-columns: repeat(6, 1fr )
+      grid-row-gap: 40px
+    &__input
+      flex-basis: 48%
+    &__logo
+      grid-row: 1 / 2
+      grid-column: span 2
+    &__social
+      &-network
+        grid-row: 1 / 2
+        grid-column: span 4
+        align-self: center
+    &__categories
+      grid-column: span 2
+      grid-row: 2 / 3
+    &__legal
+      grid-column: span 2
+    &__additional
+      grid-column: span 2
+    &__contact
+      &-details
+        grid-column: span 5
+        grid-row: 3
+      &-form
+        grid-column: span 5
+        grid-row: 4
+    &__cancellatios
+      justify-content: space-between
+      align-items: center
+      &_icon
+        margin-left: auto
+@media  ( max-width: 768px )
   .container
     max-width: 576px
     width: 92%
+  body
+    padding-top: 78px
+  .search
+    &__input
+      max-width: 245px
   .navbar
-    &__search, &__menu, &__user
+    &_mobile
+      &_fixed
+        position: fixed
+        top: 0
+        left: 0
+        right: 0
+        z-index: 99
+    &__user, &__search
+      &_mobile
+        &_hidden
+          display: none
+        &_visible
+          display: flex
+    &__user
+      flex-direction: column
+      justify-content: center
+    &-bottom
       display: none
+      position: fixed
+      left: 0
+      right: 0
+      bottom: 0
+      top: 78px
+      padding-top: 30px
+      &--visible
+        display: block
     &-menu
-      display: none
+      flex-direction: column
+      &__item
+        margin-bottom: 20px
+        &_mobile
+          &_visible
+            display: block
+  .hidden
+    overflow-y: hidden
   .menu
     &-button
       display: flex
@@ -43,16 +153,174 @@
         width: 16px
         height: 1px
         background-color: $text-color
-@media  (max-width: 576px)
+  .user
+    &__name
+      &--light
+        color: $light
+        margin-left: 0
+        margin-top: 10px
+  .stars
+    flex-basis: content
+  .hotel
+    &-name
+      flex-basis: 100%
+    &-wrapper
+      justify-content: space-between
+    &-info
+      &__text
+        width: 100%
+      &__name
+        margin-top: 10px
+        margin-bottom: 0
+      &__rating
+        display: none
+      &__offer
+        order: -1
+        margin-left: 0
+  .hotel
+    &-right
+      flex-direction: column
+      min-height: 450px
+    &-slider
+      height: 350px
+  .booking
+    width: 100%
+  .map
+    width: 100%
+  .newslatter
+    &-wrapper
+      max-width: 576px
+      width: 92%
+      flex-direction: column
+      align-items: flex-start
+  .reviews
+    padding: 40px 0 60px 0
+    &__title
+      margin-bottom: 50px
+      font-size: 30px
+      line-height: 38px
+    &-slider
+      &__item
+        max-width: 580px
+        padding: 0 30px 30px
+        &::after, &::before
+          display: none
+      &__button
+        top: 32px
+
+        &--prev
+          left: 50%
+          margin-left: -65px
+          transform: translate(-50%, 0)
+        &--next
+          right: 50%
+          margin-right: -65px
+          transform: translate(50%, 0)
+  .activities
+    padding-top: 40px
+    padding-bottom: 60px
+  .card
+    width: 49%
+    height: 255px
+  .footer
+    &__input
+      flex-basis: 100%
+
+@media  ( max-width: 576px)
   .container
     max-width: 480px
     width: 92%
   .logo
     width: 99px
-@media  (max-width: 480px)
-  .container
-    max-width: 320px
+  .slider
+    height: 250px
+  .hotel
+    &-slider
+      height: 250px
+    &__slider
+      margin-bottom: 20px
+  .newslatter
+    padding: 76px 0 83px 0
+    &__title
+      margin-bottom: 37px
+      font-style: normal
+      font-weight: 300
+      font-size: 20px
+      line-height: 25px
+  .subscribe
+    width: 100%
+  .card
+    width: 100%
+  .footer
+    &-wrapper
+      grid-template-columns: 1fr
+      grid-gap: 30px
+    &__logo
+      grid-row: 1
+      grid-column: 1
+    &__social
+      &-network
+        grid-row: 2
+        grid-column: 1
+    &__additional
+      grid-row: 3
+      grid-column: 1
+    &__categories
+      grid-row: 4
+      grid-column: 1
+    &__legal
+      grid-row: 5
+      grid-column: 1
+    &__form
+      flex-direction: column
+    &__contact
+      &-details
+        grid-row: 6
+        grid-column: 1
+      &-form
+        grid-row: 7
+        grid-column: 1
+    &__message
+      width: 100%
+    &__input
+      width: 100%
+      padding: 18px 0 17px 23px
+    &__button
+      order: 1
+    &__info
+      margin-bottom: 15px
+    &__cancellatios
+      flex-direction: column
+      align-items: flex-start
+      flex-wrap: wrap
+      margin-top: 30px
+      &_text
+        margin-bottom: 10px
+      &_icon
+        margin: 0
+@media  ( max-width: 480px)
+  .container, .newslatter-wrapper
+    max-width: 400px
     width: 92%
-@media  (max-width: 320px)
+  .subscribe
+    width: 100%
+@media  ( max-width: 320px)
   .container
     max-width: 90%
+  .newslatter
+    padding: 76px 0 83px 0
+  .subscribe
+    width: 100%
+  .reviews
+    padding: 40px 0 50px 0
+    &__title
+      max-width: 245px
+      margin: auto
+      margin-bottom: 42px
+      font-size: 18px
+      line-height: 23px
+  .footer
+    &__form
+      flex-direction: column
+      flex-wrap: wrap
+      align-items: flex-start
