--- a/src/sass/_settings.sass
+++ b/src/sass/_settings.sass
@@ -1,11 +1,42 @@
 *
   box-sizing: border-box
 body
+  font-family: "Mulish"
   background-color: $secondary
   color: $text-color
-  font-family: "Mulish"
 .container
   max-width: 1110px
   margin: auto
 img
   max-width: 100%
+.input
+  background-color: #fff
+  border-radius: 4px
+  border: none
+  padding: 0 23px
+  height: 50px
+.message
+  background-color: $light
+  width: 539px
+  height: 123px
+  resize: none
+  border-radius: 4px
+  padding: 18px 23px
+  border: none
+.button
+  min-width: 160px
+  min-height: 50px
+  padding: 18px
+  font-style: normal
+  font-weight: bold
+  font-size: 12px
+  line-height: 15px
+  color: $light
+  background-color: $primary
+  border-radius: 4px
+  border: none
+.form
+  display: flex
+  align-items: center
+  justify-content: space-between
+  flex-wrap: wrap
