--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -1,5 +1,6 @@
-$text-color: #333333
-$secondary: #F5FAFE
 $primary: #EC1F46
+$secondary: #F5FAFE
+$text-color: #333333
+$footer-text-color: #BDBDBD
 $dark: #0A223D
 $light: #fff
