--- a/src/sass/_settings.sass
+++ b/src/sass/_settings.sass
@@ -26,7 +26,7 @@ img
 .button
   min-width: 160px
   min-height: 50px
-  padding: 18px
+  padding: 13px
   font-style: normal
   font-weight: bold
   font-size: 12px
@@ -35,8 +35,7 @@ img
   background-color: $primary
   border-radius: 4px
   border: none
-.form
-  display: flex
-  align-items: center
-  justify-content: space-between
-  flex-wrap: wrap
+  cursor: pointer
+.invalid
+  color: $primary
+  font-size: 14px
