--- a/src/sass/blocks/_footer.sass
+++ b/src/sass/blocks/_footer.sass
@@ -3,8 +3,6 @@
   color: $light
   padding-top: 108px
   padding-bottom: 46px
-  &__button
-    cursor: pointer
   &-wrapper
     display: grid
     grid-template-columns: repeat(4, minmax(min-content, 1fr))
@@ -12,7 +10,9 @@
     grid-auto-rows: minmax(40px, min-content)
     align-items: start
   &__logo
-    width: 166px
+    width: 154px
+    height: 173px
+    margin-top: 31px
     grid-row: 1 / 3
     align-self: stretch
   &__categories
@@ -47,7 +47,7 @@
     &--inline
       margin: 0 43px 0 0
     &--mb-3
-      margin-bottom: 30px
+      margin-bottom: 37px
   &__item
     display: flex
     align-items: flex-start
@@ -63,19 +63,22 @@
       min-width: 40px
   &__text
     color: $footer-text-color
-    margin-bottom: 22px
+    margin-bottom: 25px
   &__link
     text-decoration: none
     color: inherit
   &__input
-    margin-bottom: 15px
-    flex-basis: 48%
+    width: 100%
+    &-group
+      margin-bottom: 15px
+      flex-basis: 48%
   &__message
     flex-basis: 100%
     margin-bottom: 23px
   &__info
     font-style: normal
     font-weight: bold
+    margin-top: 24px
     font-size: 12px
     line-height: 15px
     color: #E0E0E0
@@ -91,3 +94,8 @@
       line-height: 15px
     &_icon
       margin-left: 277px
+  &__form
+    display: flex
+    align-items: flex-start
+    justify-content: space-between
+    flex-wrap: wrap
