--- a/src/sass/blocks/_newslatter.sass
+++ b/src/sass/blocks/_newslatter.sass
@@ -1,6 +1,6 @@
 .newslatter
   position: relative
-  padding: 98px 0 87px 0
+  padding: 79px 0 69px 0
   background-image: url(../img/newslatter-bg.jpg)
   background-repeat: no-repeat
   background-position: center
@@ -39,7 +39,6 @@
   width: 350px
   height: 55px
   border-radius: 4px
-  overflow: hidden
   &__input
     position: absolute
     width: 100%
@@ -60,4 +59,7 @@
     border: none
     background-color: $primary
     color: $light
-    cursor: pointer
+    border-radius: 4px 0 0 4px
+  label.invalid
+    position: absolute
+    top: 58px
